# mkrepo

./: README.md  pyproject.toml
src/mkrepo/: cli.py  config.py  fs.py  generator.py
